# Urban-Street-Camera-Optimizer

Approx_Algo_and_SAT/: .gitignore  CMakeLists.txt  ece650-prj.cpp  ece650-prj.hpp  script_draw_ratio.py  script_draw_time.py  script_time_2.py  scripts_20_50.py  scripts_2_18.py  solverFunctions.cpp
cover_solver_SAT/: .gitignore  CMakeLists.txt  cover_solver.cpp  cover_solver.hpp  user.yml
driver_program/: .gitignore  CMakeLists.txt  driver.cpp  rgen.cpp  rgen.hpp  shortest_path.cpp  street_intersection.py
shortest_paths/: CMakeLists.txt  shortest_path.cpp  shortest_path.hpp  user.yml
street_intersection/: street_intersection.ipynb  street_intersection.py
